css/hydra.css
/* A reset for 3rd party tech spitting out styles into [aria-hidden] */
body[aria-hidden] {
	text-align: left;
	padding: 0;
	margin: 0;
	position: static;
}

.mw-body {
	padding: 1em;
}

/* No no vector. Serif fonts are ugly. */
.mw-body h1, .mw-body h2 {
	font-family: sans-serif;
}

div.suggestions,html > body div.suggestions {
	margin-top: -28px;
}

/* Post Edit Notification */
div.postedit-container {
	top: 30px;
}

pre, .mw-code {
	white-space: pre-wrap;
	word-wrap: break-word;
}

div#mw-panel {
	font-size: inherit;
	position: absolute;
	top: 160px;
	padding-top: 1em;
	width: 10em;
	left: 0;
}

#mw-panel #p-logo + div.portal {
	margin-top: 0;
}

#mw-panel .portal h3 {
	margin-left: 0;
}

#p-logo {
	height: 160px;
	left: 0.5em;
	position: absolute;
	top: -160px;
	width: 10em;
}

@media screen and (max-width:982px) {
	#p-logo {
		left: 0;
	}
}

div.vectorTabs li a {
	padding-left: 0.5em;
	padding-right: 0.5em;
}

/*************/
/* ReCaptcha */
/*************/
#recaptcha_table {
	background: none repeat scroll 0 0 #fff;
}

.recaptchatable * {
	line-height: 100%;
}

#recaptcha_table:nth-child(1) td {
	padding-bottom: 0;
}

/************/
/* MsUpload */
/************/
#upload_list .file .file-title {
	color: #000;
}

.check_span {
	color: #1D1D1D;
	float: right;
}

#msupload-container{
	vertical-align: middle;
}

/*****************/
/* Visual Editor */
/*****************/
.oo-ui-dialog .oo-ui-window-frame {
	z-index: 10;
}

.ve-init-mw-switchPopupWidget .oo-ui-checkboxInputWidget [type='checkbox']{ opacity:1; }

/* For elements which only display in the mobile view */
.mobileonly {
	display: none;
}

/* Some custom CSS on Wiki's applies the drop down arrow here. Normally this has no background, so positioning shouldn't effect standard views. */
/* More details are available here: http://hydra.gamepedia.com/MW_1.26_CSS_Changes */
div.vectorMenu {
	background-repeat: no-repeat;
	background-position: 100% 70%;
}

.gamepedia_pro_user::before {
	background-image: url("../images/icons/gamepediapro.svg");
	background-size: 2em 1.5em;
	content: "";
	display: inline-block;
	height: 1.5em;
	margin-right: 3px;
	margin-top: -0.23em;
	position: relative;
	vertical-align: middle;
	width: 2em;
}

.tipsy {
	margin-top: -28px;
}

/**********/
/* Popups */
/**********/

.mwe-popups.flipped_y,
.mwe-popups.flipped_x_y {
	margin-top: -30px;
}

.wikisites.errorbox {
	margin: 5px 0;
	display: block;
}

